--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -28,4 +28,4 @@
     <%end%>
   </table>
 </div>
-<button onclick="generatePDF()">Скачать PDF</button>
+<button onclick="generatePDF()" class="btn btn-outline-light me-2 text-bg-dark">Скачать PDF</button>
