--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,7 +70,13 @@
 }
 .course__avatar {
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
+    align-items: center;
+}
+.course__percentage {
+    margin-left: 20px;
+    font-size: 1.5em;
+    font-weight: 600;
 }
 .course__additional {
     display: flex;
@@ -148,7 +154,12 @@
   margin: 0 auto;
   font-size: 100%;
   max-width: 700px;
+    position: relative;
   font-family: inherit;
+}
+.galochka {
+    position: absolute;
+    left: -20px;
 }
 
 .lesson__buttons {
@@ -196,4 +207,7 @@
 .question__form {
     display: flex;
     flex-direction: column;
+}
+.text-white.dropdown-item:hover {
+    color: black!important;
 }
